<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Medifinder</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="msg_forgotten_your"><u>Forgot Your Password?</u></string>
    <string name="lbl_help_centre">Help Centre</string>
    <string name="msg_jaksa_agung_sup">Jaksa Agung Suprapto St. Number 2, Klojen, Klojen, Malang CIty, East Java 65112</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_register2">Register</string>
    <string name="lbl_no">No</string>
    <string name="lbl_about_app">About App</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="lbl_0341_362101">(0341) 362101</string>
    <string name="lbl_recommended">Recommended</string>
    <string name="msg_nearest_hospita">Nearest Hospital From Your Location!</string>
    <string name="msg_soekarno_hatt">Soekarno - Hatta St., Lowokwaru, Lowokwaru, Malang City, East Java 65141</string>
    <string name="lbl_send_link">Send Link</string>
    <string name="msg_already_have_an">Already have an account?</string>
    <string name="lbl_help_center">Help Center</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="msg_hospital_inform">Hospital Information</string>
    <string name="lbl_log_in">Log in</string>
    <string name="msg_brawijaya_unive">Brawijaya University Hospital</string>
    <string name="lbl_e_mail">E-mail</string>
    <string name="lbl_log_out">Log Out</string>
    <string name="msg_find_the_neares">Find the nearest hospital from your location during an emergency</string>
    <string name="msg_rischamaudya03">rischamaudya03@gmail.com</string>
    <string name="lbl_login3">LOGIN</string>
    <string name="lbl_login2">Login</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="msg_reset_your_pass">Reset Your Password</string>
    <string name="msg_your_identity_h">Your identity has been verified.
Set your new password!</string>
    <string name="lbl_skip">Skip</string>
    <string name="msg_62_858_1234_56">+62 858 1234 5678</string>
    <string name="lbl_privacy">Privacy</string>
    <string name="lbl_register">REGISTER</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_change_name">Change Name</string>
    <string name="msg_change_phone_nu">Change Phone Number</string>
    <string name="msg_we_work_super_h">We work super hard to make MediFinder better for you, and would love to know: how would you rate our app?</string>
    <string name="msg_verizca_maudia">Verizca Maudia Putri</string>
    <string name="lbl_search">Search</string>
    <string name="msg_we_will_never_s">We will never share your data with other apps or services</string>
    <string name="msg_create_new_acco">Create New Account</string>
    <string name="msg_welcome_verizc">Welcome, Verizca!</string>
    <string name="msg_don_t_have_any">Don\u2019t have any account? Create one</string>
    <string name="msg_are_you_sure_yo">Are you sure you want to log out?</string>
    <string name="lbl_emergency">Emergency?</string>
    <string name="msg_rate_medifinder">Rate MediFinder App</string>
    <string name="msg_dr_saiful_anwa">Dr. Saiful Anwar Hospital</string>
    <string name="msg_are_you_sure_yo2">Are you sure you want to
delete your account?</string>
    <string name="msg_find_nearest_ho">Find Nearest Hospital</string>
    <string name="msg_your_password_h">Your password has been updated!</string>
    <string name="lbl_change_address">Change Address</string>
    <string name="lbl_manage_accounts">Manage Accounts</string>
    <string name="lbl_find_hospital">Find Hospital</string>
    <string name="msg_please_enter_yo">Please enter your e-mail address, so we will send you a reset link.</string>
    <string name="lbl_no_thanks">No, Thanks!</string>
    <string name="msg_your_opinion_ma">Your opinion matters
to us!</string>
    <string name="msg_welcome_to_medi">Welcome To MediFinder!</string>
    <string name="msg_new_credential">New

        Credentials</string>
    <string name="msg_password_update">Password
Updated!</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_settings">Settings</string>
    <string name="msg_find_any_hospit">Find any hospital that suits your needs</string>
    <string name="lbl_update">Update</string>
    <string name="msg_you_can_find_th">You can find complete information that related to hospital that you need.</string>
    <string name="lbl_rate_medifinder">Rate MediFinder</string>
    <string name="lbl_delete_account">Delete Account</string>
    <string name="lbl_manage_account">Manage Account</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_yes_i_m_sure">Yes, I\u2019m sure</string>
    <string name="lbl_detail_informat">Detail Information</string>
    <string name="msg_description">"This application arises from a very crucial need in our daily lives. Sometimes, we or our loved ones may suddenly require emergency medical care. However, it is often difficult to find the nearest hospital, health center, or clinic, especially if we are not familiar with the area. That's why this application exists help us quickly and easily find medical assistance.
In today's society, healthcare services are extremely important, and hospitals serve as vital centers that provide medical services and improve public health. Nevertheless, with the increasing complexity of healthcare services and the push for efficiency, improving accessibility to hospital-related information becomes crucial.
Hospital information service applications are now the primary solution in this digital era. Although hospitals already have websites, mobile applications allow for greater accessibility. Currently, society relies on their mobile devices to access information quickly and easily, and developing such applications is a wise step that responds to technological trends and societal needs."</string>
    <string name="msg_you_can_find_co">You can find complete information that related to hospital that you need.</string>
    <string name="lbl_0341_403000">(0341) 403000</string>
    <string name="lbl_full_name">Full Name</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="kategori1">Umum</string>
    <string name="kategori2">Gigi</string>
    <string name="kategori3">Jantung</string>
    <string name="kategori4">Anak</string>
    <string name="kategori5">Orthopedi</string>
    <string name="kategori6">Obgyn</string>
    <string name="kategori7">Penyakit Dalam</string>
    <string name="kategori8">Bedah</string>
    <string name="kategori9">Laboratorium</string>
    <string name="kategori10">Paru-Paru</string>
    <string name="kategori11">Kejiwaan</string>
    <string name="kategori12">Lainnya</string>
</resources>
