<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.andhikaihsansapplication.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyledeep_orange_50">
        <ImageView android:id="@+id/imageMedifinderhigh"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_48pxh"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="@dimen/_310pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_medifinderhigh"
            tools:ignore="ContentDescription" tools:src="@drawable/img_medifinderhigh"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLOGIN"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtLOGIN}"
            style="@style/txtJostromanbold24" tools:text="@string/lbl_login3"/>
        <LinearLayout android:id="@+id/linearUsername"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtUsername"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtUsername}"
                style="@style/txtJostromanmedium14" tools:text="@string/lbl_username"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnlineone"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylered_700cornerRadius">
                <View android:background="@color/deep_orange_50"
                    android:id="@+id/lineLineOne"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginEnd="@dimen/_9pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_30pxv" android:layout_width="@dimen/_294pxh"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearPass"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtPassword"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtPassword}"
                style="@style/txtJostromanmedium14" tools:text="@string/lbl_password"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnlinetwo"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylered_700cornerRadius">
                <View android:background="@color/deep_orange_50"
                    android:id="@+id/lineLineTwo"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginEnd="@dimen/_9pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_30pxv" android:layout_width="@dimen/_294pxh"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtLoginOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_212pxv"
            android:layout_width="wrap_content"
            android:paddingBottom="@dimen/_2pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@{loginVM.loginModel.txtLoginOne}"
            style="@style/txtSolidRounded_1" tools:text="@string/lbl_login2"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgottenYour"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtForgottenYour}"
            style="@style/txtJostromanmedium14" tools:text="@string/msg_forgotten_your"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtDonthaveany"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtDonthaveany}"
            style="@style/txtJostromanmedium14" tools:text="@string/msg_don_t_have_any"/>
        <TextView android:ellipsize="end" android:id="@+id/txtResister"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="wrap_content"
            android:paddingBottom="@dimen/_2pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@{loginVM.loginModel.txtResister}"
            style="@style/txtSolidRounded_1" tools:text="@string/lbl_register2"/>
    </LinearLayout>
</layout>
