<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgotPasswordVM" type="com.andhikaihsansapplication.app.modules.forgotpassword.data.viewmodel.ForgotPasswordVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearForgotpassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyledeep_orange_50">
        <TextView android:id="@+id/txtResetYourPass"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_46pxv"
            android:layout_width="match_parent"
            android:text="@{forgotPasswordVM.forgotPasswordModel.txtResetYourPass}"
            style="@style/txtJostromanbold36" tools:text="@string/msg_reset_your_pass"/>
        <TextView android:id="@+id/txtPleaseenteryo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="match_parent"
            android:text="@{forgotPasswordVM.forgotPasswordModel.txtPleaseenteryo}"
            style="@style/txtJostromansemibold14" tools:text="@string/msg_please_enter_yo"/>
        <LinearLayout android:id="@+id/linearUsername"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{forgotPasswordVM.forgotPasswordModel.txtEmail}"
                style="@style/txtJostromanmedium14" tools:text="@string/lbl_e_mail"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnlineone"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylered_700cornerRadius">
                <EditText
                    android:id="@+id/lineLineOne"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_40pxv"
                    android:layout_width="@dimen/_300pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginEnd="@dimen/_9pxh"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:backgroundTint="@color/white"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtSendlink"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_53pxv"
            android:layout_width="wrap_content"
            android:paddingBottom="@dimen/_5pxv"
            android:paddingEnd="@dimen/_29pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@{forgotPasswordVM.forgotPasswordModel.txtSendlink}"
            style="@style/txtSolidRounded_1" tools:text="@string/lbl_send_link"/>
    </LinearLayout> 
</layout>
