<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="rateVM" type="com.andhikaihsansapplication.app.modules.rate.data.viewmodel.RateVM"/>
    </data>
    <FrameLayout android:id="@+id/frameRate"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyledeep_orange_50">
        <LinearLayout android:id="@+id/linearColumnarrowleft"
            android:layout_gravity="top|start"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_19pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowarrowleft"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageButton
                        android:background="@drawable/rectangle_bg_bluegray_300_radius_10"
                        android:id="@+id/btnArrowleft"
                        android:layout_height="@dimen/_50pxh"
                        android:layout_width="@dimen/_50pxh"
                        android:paddingHorizontal="@dimen/_13pxh"
                        android:paddingVertical="@dimen/_13pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_arrowleft" tools:ignore="ContentDescription"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtRateMediFinder"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_7pxv"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_weight="0.79"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{rateVM.rateModel.txtRateMediFinder}"
                        style="@style/txtJostromanbold24" tools:text="@string/lbl_rate_medifinder"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/txtYouropinionma"
                style="@style/txtJostromanbold28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_108pxv"
                android:layout_marginEnd="@dimen/_25pxh"
                android:gravity="center"
                android:text="@{rateVM.rateModel.txtYouropinionma}"
                tools:text="@string/msg_your_opinion_ma" />

            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtWeworksuperh"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:text="@{rateVM.rateModel.txtWeworksuperh}"
                style="@style/txtJostromanmedium14" tools:text="@string/msg_we_work_super_h"/>
            <ImageView android:id="@+id/imageStar"
                android:layout_gravity="center"
                android:layout_height="@dimen/_33pxh"
                android:layout_marginEnd="@dimen/_40pxh"
                android:layout_marginStart="@dimen/_40pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="@dimen/_203pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_star"
                tools:ignore="ContentDescription" tools:src="@drawable/img_star"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSubmit"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_90pxh"
                android:layout_marginStart="@dimen/_90pxh"
                android:layout_marginTop="@dimen/_80pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_2pxv"
                android:paddingEnd="@dimen/_9pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_5pxv"
                android:singleLine="true"
                android:text="@string/lbl_submit"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_2" tools:text="@string/lbl_submit"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtNothanks"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_90pxh"
                android:layout_marginStart="@dimen/_90pxh"
                android:layout_marginTop="@dimen/_38pxv"
                android:layout_width="wrap_content"
                android:paddingBottom="@dimen/_2pxv"
                android:paddingEnd="@dimen/_9pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_5pxv"
                android:singleLine="true"
                android:text="@{rateVM.rateModel.txtNothanks}"
                style="@style/txtSolidRounded" tools:text="@string/lbl_no_thanks"/>
        </LinearLayout>
    </FrameLayout>
</layout>
