<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="credentialsVM" type="com.andhikaihsansapplication.app.modules.credentials.data.viewmodel.CredentialsVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearCredentials"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyledeep_orange_50">
        <TextView android:id="@+id/txtNewCredentials"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_44pxv"
            android:layout_width="match_parent"
            android:text="@{credentialsVM.credentialsModel.txtNewCredentials}"
            style="@style/txtJostromanbold36" tools:text="@string/msg_new_credential"/>
        <TextView android:id="@+id/txtYouridentityh"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="match_parent"
            android:text="@{credentialsVM.credentialsModel.txtYouridentityh}"
            style="@style/txtJostromansemibold14" tools:text="@string/msg_your_identity_h"/>
        <LinearLayout android:id="@+id/linearNewpass"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_61pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtNewPassword"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{credentialsVM.credentialsModel.txtNewPassword}"
                style="@style/txtJostromanmedium14" tools:text="@string/lbl_new_password"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnlineone"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylered_700cornerRadius">
                <View android:background="@color/deep_orange_50"
                    android:id="@+id/lineLineOne"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginEnd="@dimen/_9pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_30pxv" android:layout_width="@dimen/_294pxh"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearConfirm"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtConfirmPasswor"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{credentialsVM.credentialsModel.txtConfirmPasswor}"
                style="@style/txtJostromanmedium14" tools:text="@string/msg_confirm_passwor"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnlineoneOne"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylered_700cornerRadius">
                <View android:background="@color/deep_orange_50"
                    android:id="@+id/lineLineOneOne"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginEnd="@dimen/_9pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_30pxv" android:layout_width="@dimen/_294pxh"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearUpdate"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_70pxv"
            android:layout_width="wrap_content"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnUpdate"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_4pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_4pxv"
                android:singleLine="true"
                android:text="@string/lbl_update"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_3" tools:text="@string/lbl_update"/>
        </LinearLayout>
    </LinearLayout>
</layout>
